# velox

velox/common/caching/: AsyncDataCache.cpp  AsyncDataCache.h  SsdFile.cpp
velox/common/dynamic_registry/: CMakeLists.txt  DynamicFunctionRegistrar.h  DynamicLibraryLoader.cpp  DynamicLibraryLoader.h  DynamicUdf.h  README.md
velox/common/dynamic_registry/tests/: CMakeLists.txt  DynamicLinkTest.cpp  MyDynamicErrFunction.cpp  MyDynamicFunction.cpp  MyDynamicIntFunction.cpp  MyDynamicIntFunction2.cpp  MyDynamicIntFunctionOverload.cpp  MyDynamicIntFunctionOverwrite.cpp  MyDynamicSameTwiceFunction.cpp  MyDynamicStrFunction.cpp  MyDynamicStrFunction2.cpp  MyDynamicVarcharFunctionOverload.cpp  MyDynamicVarcharFunctionOverwrite.cpp
velox/common/memory/: MemoryAllocator.cpp  MemoryAllocator.h  MemoryPool.cpp  MmapAllocator.cpp
velox/connectors/hive/: HiveConnectorUtil.cpp
velox/connectors/hive/iceberg/: CMakeLists.txt  DataFileStatsCollector.cpp  DataFileStatsCollector.h  IcebergDataSink.cpp
velox/connectors/hive/storage_adapters/s3fs/: S3FileSystem.cpp
velox/docs/develop/: types.rst
velox/docs/functions/presto/: conversion.rst
velox/exec/tests/: TableScanTest.cpp
velox/exec/tests/utils/: HiveConnectorTestBase.cpp  HiveConnectorTestBase.h
velox/expression/: ExprCompiler.cpp  FunctionSignature.cpp  velox.code-workspace
velox/functions/: DynamicUdf.h  FunctionRegistry.cpp
velox/functions/prestosql/: IPAddressFunctions.h  TypeOf.cpp
velox/functions/prestosql/registration/: RegistrationFunctions.cpp
velox/functions/prestosql/tests/: CMakeLists.txt  IPAddressFunctionsTest.cpp  IPPrefixCastTest.cpp
velox/functions/prestosql/types/: IPAddressType.cpp  IPAddressType.h  IPPrefixType.cpp  IPPrefixType.h
velox/vector/arrow/: Bridge.cpp
